--- a/index.html
+++ b/index.html
@@ -8,37 +8,24 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        <header>
-            <div class="top-bar">
-                <div class="logo">TFL Studios</div>
-                <div class="socials">
-                    <a href="https://www.instagram.com/tfl_studios25/">Instagram</a>
-                </div>
-            </div>
-            <nav class="nav-bar">
-                <a href="index.html">Start</a>
-                <a href="projects.html">Projekte</a>
-                <a href="team.html">Team</a>
-            </nav>
-        </header>
-
         <section class="banner">
-            <h1>Filme, die anders erzählen.</h1>
+            <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
         </section>
-
-        <section class="news">
-            <article>
-                <h3>Die Dreharbeiten stehen in den Startlöchern</h3>
-                <p>Nach vielen harten Monaten Plaung und Organisation starten demnächst die ersten Dreharbeiten: Am 28. Juli filmen wir die ersten Szenen zu "365 Days of Dead".</p>
-            </article>
-        </section>
-
+        <main>
+            <section class="about">
+                <h1>Wer wir sind</h1>
+                <p>Wir sind Fynn und Tim, zwei Freunde...</p>
+            </section>
+            <section class="projects">
+                <h1>Bevorstehende Filmprojekte</h1>
+                <div class="project-container">
+                    <img class="poster" src="assets/365-days-of-dead.png">
+                    <p class="description">365 Days of Dead handelt von...</p>
+                </div>
+            </section>
+        </main>
         <footer>
-            <p>&copy; 2025 Maximilian Langguth</p>
-            <a href="#">Impressum</a> |
-            <a href="#">Kontakt</a> |
-            <a href="#">Datenschutz</a>
         </footer>
     </body>
 </html>
