--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
         <main>
             <section class="about">
                 <h1>Wer wir sind</h1>
-                <p>Wir sind Fynn und Tim, zwei Freunde...</p>
+                <p>Wir sind Fynn und Tim [...]</p>
             </section>
             <section class="projects">
                 <h1>Bevorstehende Filmprojekte</h1>
                 <div class="project-container">
                     <img class="poster" src="assets/365-days-of-dead.png">
-                    <p class="description">365 Days of Dead handelt von...</p>
+                    <p class="description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
                 </div>
+            </section>
+            <section class="contact">
+                <h1>Du willst mitmachen?</h1>
+                <p>Wir suchen derzeit Darsteller für verschiedene Rollen in unseren neuesten Projekten. Würdest du gerne als Darsteller oder eventuell auch als Drehbuchautor mitwirken? Hast du Lust, Geschichte zu schreiben und die Indie-Filmwelt neu zu definieren?</p>
             </section>
         </main>
         <footer>
+            <p>&copy 2025 Maximilian Langguth</p>
+            <p>Impressum</p>
         </footer>
     </body>
 </html>
