--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                 <h1>Bevorstehende Filmprojekte</h1>
                 <div class="project-container">
                     <img class="poster" src="assets/365-days-of-dead.png">
-                    <p class="description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
+                    <p class="project-description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
                 </div>
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
-                <p>Wir suchen derzeit Darsteller für verschiedene Rollen in unseren neuesten Projekten. Würdest du gerne als Darsteller oder eventuell auch als Drehbuchautor mitwirken? Hast du Lust, Geschichte zu schreiben und die Indie-Filmwelt neu zu definieren?</p>
+                <p>Wir suchen derzeit Darsteller für verschiedene Rollen in unseren neuesten Projekten. Würdest du gerne als Darsteller oder eventuell auch als Drehbuchautor mitwirken? Hast du Lust, Geschichte zu schreiben und die Indie-Filmwelt neu zu definieren? Dann schreib uns ganz einfach eine Direktnachricht auf Instagram oder Email!</p>
             </section>
         </main>
         <footer>
             <p>&copy 2025 Maximilian Langguth</p>
-            <p>Impressum</p>
+            <a href="impressum.html">Impressum</a>
         </footer>
     </body>
 </html>
