--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>TFL Studios</title>
+        <title>Impressum | TFL Studios</title>
         <link rel="stylesheet" href="style.css"/>
         <meta name="robots" content="noindex">
     </head>
@@ -11,7 +11,7 @@
         <main>
             <section>
                 <h1>Impressum</h1>
-                <p>Email: test@gmail.com</p>
+                <p>Impressum ist in Bearbeitung und wird in Kürze eingefügt. Bei Fragen bitte per Email an mlangguth2006@gmail.com wenden.</p>
             </section>
         </main>
         
