--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        <section class="banner">
+        <div class="banner">
             <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
-        </section>
+        </div>
         <main>
+            <section class="video">
+                <iframe
+                src="https://www.youtube-nocookie.com/embed/ApKJN2ji_s0?si=zVSKtccipraK-8tM"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                controls="0">
+                </iframe>
+            </section>
             <section class="about">
                 <h1>Wer wir sind</h1>
                 <p>Wir sind Fynn und Tim [...]</p>
@@ -20,7 +29,7 @@
             <section class="projects">
                 <h1>Bevorstehende Filmprojekte</h1>
                 <div class="project-container">
-                    <img class="poster" src="assets/365-days-of-dead.png">
+                    <a href="https://www.youtube.com"><img class="poster" src="assets/365-days-of-dead.png"></a>
                     <p class="project-description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
                 </div>
             </section>
@@ -30,8 +39,11 @@
             </section>
         </main>
         <footer>
-            <p>&copy 2025 Maximilian Langguth</p>
-            <a href="impressum.html">Impressum</a>
+            <p>&copy 2025 TFL Studios</p>
+            <p>
+                <a href="impressum-und-datenschutz.html#Impressum">Impressum</a> |
+                <a href="impressum-und-datenschutz.html#Datenschutz">Datenschutz</a>
+            </p>
         </footer>
     </body>
 </html>
