--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
             <p>Unabhängig. Kreativ. Bewegend.</p>
         </div>
         <main>
-            <section class="video">
-                <iframe
-                src="https://www.youtube-nocookie.com/embed/ApKJN2ji_s0?si=zVSKtccipraK-8tM"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-                controls="0">
-                </iframe>
-            </section>
+            
             <section class="about">
                 <h1>Wer wir sind</h1>
                 <p>Wir sind Fynn und Tim [...]</p>
@@ -35,7 +27,16 @@
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
-                <p>Wir suchen derzeit Darsteller für verschiedene Rollen in unseren neuesten Projekten. Würdest du gerne als Darsteller oder eventuell auch als Drehbuchautor mitwirken? Hast du Lust, Geschichte zu schreiben und die Indie-Filmwelt neu zu definieren? Dann schreib uns ganz einfach eine Direktnachricht auf Instagram oder Email!</p>
+                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann schick uns gerne eine DM auf Instagram oder eine E-Mail!</p>
+            </section>
+            <section class="video">
+                <iframe
+                src="https://www.youtube-nocookie.com/embed/ApKJN2ji_s0?si=zVSKtccipraK-8tM"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                controls="0">
+                </iframe>
             </section>
         </main>
         <footer>
