--- a/impressum-und-datenschutz.html
+++ b/impressum-und-datenschutz.html
@@ -8,18 +8,58 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        <main>
+        <main class="imprint">
             <section>
                 <h1>Impressum</h1>
-                <p>Impressum ist in Bearbeitung und wird in Kürze eingefügt.</p>
-            </section>
-            <section>
-                <h1>Kontakt</h1>
-                <p>Kontaktdaten werden in Kürze eingefügt. Bei Fragen gerne per Email an mlangguth2006@gmail.com wenden.</p>
+                <p>
+                    Angaben gemäß § 5 TMG:
+
+                    <br>TFL Studios
+                    <br>[Rechtsform, z. B. Einzelunternehmen, GbR, UG, GmbH etc.]
+                    <br>Fynn H. Boettcher
+                    <br>[Straße und Hausnummer]
+                    <br>[Postleitzahl und Ort]
+                    <br><br>E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a>
+                    <br>Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
+                    <br><br>Vertreten durch:
+                    <br>Fynn H. Boettcher
+                    <br><br>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
+                    <br>[Name und Anschrift wie oben oder gesonderte Person]
+                    <br><br>Umsatzsteuer-ID:
+                    <br>[falls vorhanden: USt-IdNr. gemäß § 27a Umsatzsteuergesetz]
+                    <br>(z. B. DE123456789)
+                    <br><br>Haftung für Inhalte
+                    <br>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).
+                    <br><br>Haftung für Links
+                    <br>Unsere Website enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte übernehmen wir keine Gewähr. Verantwortlich ist stets der jeweilige Anbieter oder Betreiber der Seiten.
+                    <br><br>Urheberrecht
+                    <br>Die durch uns erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung außerhalb der Grenzen des Urheberrechts bedarf der schriftlichen Zustimmung des jeweiligen Autors.</p>
             </section>
             <section>
                 <h1>Datenschutz</h1>
-                <p>Diese Website nutzt keine Cookies. Datenschutzhinweise werden in Kürze eingefügt. Bei Fragen bitte per Email an mlangguth2006@gmail.com wenden.</p>
+                <p>
+                    Wir freuen uns über Ihr Interesse an unserem Filmstudio und unserer Website.
+                    <br><br>1. Allgemeine Hinweise
+                    <br>Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Wir verarbeiten Ihre Daten ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TMG).
+                    <br><br>2. Keine Verwendung von Cookies
+                    <br>Unsere Website verwendet keine Cookies. Es werden keine Tracking- oder Analyse-Tools eingesetzt.
+                    <br><br>3. Server-Logfiles
+                    <br>Beim Aufrufen unserer Website werden automatisch Informationen durch den Internetbrowser Ihres Endgeräts an unseren Server gesendet und temporär in sogenannten Server-Logfiles gespeichert. Diese Daten umfassen z. B.:
+                    <br>IP-Adresse des anfragenden Geräts
+                    <br>Datum und Uhrzeit des Zugriffs
+                    <br>Name und URL der abgerufenen Datei
+                    <br>Website, von der aus der Zugriff erfolgt (Referrer-URL)
+                    <br>Verwendeter Browser und ggf. das Betriebssystem Ihres Rechners
+                    <br>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Eine personenbezogene Auswertung findet nicht statt.
+                    <br><br>4. Kontaktaufnahme
+                    <br>Wenn Sie mit uns per E-Mail oder Kontaktformular in Verbindung treten, werden Ihre Angaben ausschließlich zur Bearbeitung Ihrer Anfrage verwendet. Eine Weitergabe an Dritte erfolgt nicht.
+                    <br><br>5. Ihre Rechte
+                    <br>Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit sowie Widerspruch gegen die Verarbeitung Ihrer personenbezogenen Daten. Bei Fragen zum Datenschutz können Sie uns jederzeit kontaktieren.
+                    <br><br>Verantwortlich für die Datenverarbeitung:
+                    <br>TFL Studios
+                    <br>[Adresse]
+                    <br>[Telefonnummer, falls gewünscht]
+                    <br>[E-Mail-Adresse]</p>
             </section>
         </main>
         <footer>
@@ -27,6 +67,9 @@
             <p>
                 <a href="impressum-und-datenschutz.html#Impressum">Impressum</a> |
                 <a href="impressum-und-datenschutz.html#Datenschutz">Datenschutz</a>
+            </p>
+            <p>
+                <a href="https://www.instagram.com/tfl_studios25">Instagram</a>
             </p>
         </footer>
     </body>
