--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
         <div class="banner">
             <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
+            <a href="https://www.youtube.com/@TFLStudios25"><img src="assets/youtube.svg"></a>
         </div>
         <main>
-            
+            <section class="video">
+                <iframe
+                src="https://www.youtube-nocookie.com/embed/6hVRQ6YDJto"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                controls="0">
+                </iframe>
+            </section>            
             <section class="about">
                 <h1>Wer wir sind</h1>
                 <p>Wir sind Fynn und Tim [...]</p>
@@ -24,26 +33,26 @@
                     <a href="https://www.youtube.com"><img class="poster" src="assets/365-days-of-dead.png"></a>
                     <p class="project-description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
                 </div>
+                <div class="project-container">
+                    <a href="https://www.youtube.com"><img class="poster" src="assets/365-days-of-dead.png"></a>
+                    <p class="project-description">We are not alone 1983</p>
+                </div>
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
                 <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann schick uns gerne eine DM auf Instagram oder eine E-Mail!</p>
             </section>
-            <section class="video">
-                <iframe
-                src="https://www.youtube-nocookie.com/embed/ApKJN2ji_s0?si=zVSKtccipraK-8tM"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-                controls="0">
-                </iframe>
-            </section>
+
         </main>
         <footer>
             <p>&copy 2025 TFL Studios</p>
             <p>
                 <a href="impressum-und-datenschutz.html#Impressum">Impressum</a> |
                 <a href="impressum-und-datenschutz.html#Datenschutz">Datenschutz</a>
+            </p>
+            <p>
+                <a href="https://www.youtube.com/@TFLStudios25">YouTube</a> |
+                <a href="https://www.instagram.com/tfl_studios25">Instagram</a>
             </p>
         </footer>
     </body>
