--- a/impressum-und-datenschutz.html
+++ b/impressum-und-datenschutz.html
@@ -16,13 +16,13 @@
 
                     <br>TFL Studios
                     <br>[Rechtsform, z. B. Einzelunternehmen, GbR, UG, GmbH etc.]
-                    <br>Fynn H. Boettcher
+                    <br>Fynn.h.boettcher
                     <br>[Straße und Hausnummer]
                     <br>[Postleitzahl und Ort]
                     <br><br>E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a>
                     <br>Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
                     <br><br>Vertreten durch:
-                    <br>Fynn H. Boettcher
+                    <br>Fynn.h.boettcher
                     <br><br>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
                     <br>[Name und Anschrift wie oben oder gesonderte Person]
                     <br><br>Umsatzsteuer-ID:
@@ -44,8 +44,7 @@
                     <br><br>2. Keine Verwendung von Cookies
                     <br>Unsere Website verwendet keine Cookies. Es werden keine Tracking- oder Analyse-Tools eingesetzt.
                     <br><br>3. Server-Logfiles
-                    <br>Beim Aufrufen unserer Website werden automatisch Informationen durch den Internetbrowser Ihres Endgeräts an unseren Server gesendet und temporär in sogenannten Server-Logfiles gespeichert. Diese Daten umfassen z. B.:
-                    <br>IP-Adresse des anfragenden Geräts
+                    <br>Beim Aufrufen unserer Website werden automatisch Informationen durch den Internetbrowser Ihres Endgeräts an den Server von Netlify (unserem Hosting-Anbieter) übermittelt und dort in sogenannten Server-Logfiles gespeichert. Diese Daten umfassen z. B.:                    <br>IP-Adresse des anfragenden Geräts
                     <br>Datum und Uhrzeit des Zugriffs
                     <br>Name und URL der abgerufenen Datei
                     <br>Website, von der aus der Zugriff erfolgt (Referrer-URL)
@@ -58,8 +57,7 @@
                     <br><br>Verantwortlich für die Datenverarbeitung:
                     <br>TFL Studios
                     <br>[Adresse]
-                    <br>[Telefonnummer, falls gewünscht]
-                    <br>[E-Mail-Adresse]</p>
+                    <br><a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a></p>
             </section>
         </main>
         <footer>
