--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p class="project-description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
                 </div>
                 <div class="project-container">
-                    <a href="https://www.youtube.com"><img class="poster" src="assets/365-days-of-dead.png"></a>
+                    <a href="https://www.youtube.com"><img class="poster" src="assets/we-are-not-alone-1983.png"></a>
                     <p class="project-description">We are not alone 1983</p>
                 </div>
             </section>
