--- a/impressum-und-datenschutz.html
+++ b/impressum-und-datenschutz.html
@@ -8,65 +8,98 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        <main class="imprint">
-            <section>
-                <h1>Impressum</h1>
-                <p>
-                    Angaben gemäß § 5 TMG:
+        <main>
+            <div class="imprint">
+                <section>
+                    <h1 id="impressum">Impressum</h1>
+                    <p>Angaben gemäß § 5 TMG:</p>
+                    <p>TFL Studios<br>
+                        [Rechtsform, z. B. Einzelunternehmen, GbR, UG, GmbH etc.]<br>
+                        Fynn.h.boettcher<br>
+                        [Straße und Hausnummer]<br>
+                        [Postleitzahl und Ort]
+                    </p>
+                    <p>E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a><br>
+                        Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
+                    </p>
+                    <p>Vertreten durch:<br>
+                        Fynn.h.boettcher
+                    </p>
+                    <p>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+                        [Name und Anschrift wie oben oder gesonderte Person]
+                    </p>
+                    <p>Umsatzsteuer-ID:<br>
+                        [falls vorhanden: USt-IdNr. gemäß § 27a Umsatzsteuergesetz]<br>
+                        (z. B. DE123456789)
+                    </p>
+                    <p><b>Haftung für Inhalte</b><br>
+                        Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).
+                    </p>
+                    <p><b>Haftung für Links</b><br>
+                        Unsere Website enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte übernehmen wir keine Gewähr. Verantwortlich ist stets der jeweilige Anbieter oder Betreiber der Seiten.
+                    </p>
+                    <p><b>Urheberrecht</b><br>
+                        Die durch uns erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung außerhalb der Grenzen des Urheberrechts bedarf der schriftlichen Zustimmung des jeweiligen Autors.
+                    </p>
+                </section>
 
-                    <br>TFL Studios
-                    <br>[Rechtsform, z. B. Einzelunternehmen, GbR, UG, GmbH etc.]
-                    <br>Fynn.h.boettcher
-                    <br>[Straße und Hausnummer]
-                    <br>[Postleitzahl und Ort]
-                    <br><br>E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a>
-                    <br>Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
-                    <br><br>Vertreten durch:
-                    <br>Fynn.h.boettcher
-                    <br><br>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
-                    <br>[Name und Anschrift wie oben oder gesonderte Person]
-                    <br><br>Umsatzsteuer-ID:
-                    <br>[falls vorhanden: USt-IdNr. gemäß § 27a Umsatzsteuergesetz]
-                    <br>(z. B. DE123456789)
-                    <br><br>Haftung für Inhalte
-                    <br>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).
-                    <br><br>Haftung für Links
-                    <br>Unsere Website enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte übernehmen wir keine Gewähr. Verantwortlich ist stets der jeweilige Anbieter oder Betreiber der Seiten.
-                    <br><br>Urheberrecht
-                    <br>Die durch uns erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung außerhalb der Grenzen des Urheberrechts bedarf der schriftlichen Zustimmung des jeweiligen Autors.</p>
-            </section>
-            <section>
-                <h1>Datenschutz</h1>
-                <p>
-                    Wir freuen uns über Ihr Interesse an unserem Filmstudio und unserer Website.
-                    <br><br>1. Allgemeine Hinweise
-                    <br>Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Wir verarbeiten Ihre Daten ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TMG).
-                    <br><br>2. Keine Verwendung von Cookies
-                    <br>Unsere Website verwendet keine Cookies. Es werden keine Tracking- oder Analyse-Tools eingesetzt.
-                    <br><br>3. Server-Logfiles
-                    <br>Beim Aufrufen unserer Website werden automatisch Informationen durch den Internetbrowser Ihres Endgeräts an den Server von Netlify (unserem Hosting-Anbieter) übermittelt und dort in sogenannten Server-Logfiles gespeichert. Diese Daten umfassen z. B.:                    <br>IP-Adresse des anfragenden Geräts
-                    <br>Datum und Uhrzeit des Zugriffs
-                    <br>Name und URL der abgerufenen Datei
-                    <br>Website, von der aus der Zugriff erfolgt (Referrer-URL)
-                    <br>Verwendeter Browser und ggf. das Betriebssystem Ihres Rechners
-                    <br>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Eine personenbezogene Auswertung findet nicht statt.
-                    <br><br>4. Kontaktaufnahme
-                    <br>Wenn Sie mit uns per E-Mail oder Kontaktformular in Verbindung treten, werden Ihre Angaben ausschließlich zur Bearbeitung Ihrer Anfrage verwendet. Eine Weitergabe an Dritte erfolgt nicht.
-                    <br><br>5. Ihre Rechte
-                    <br>Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit sowie Widerspruch gegen die Verarbeitung Ihrer personenbezogenen Daten. Bei Fragen zum Datenschutz können Sie uns jederzeit kontaktieren.
-                    <br><br>Verantwortlich für die Datenverarbeitung:
-                    <br>TFL Studios
-                    <br>[Adresse]
-                    <br><a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a></p>
-            </section>
+                <section>
+                    <h1 id="datenschutz">Datenschutz</h1>
+                    <p>Wir freuen uns über Ihr Interesse an unserem Filmstudio und unserer Website.</p>
+                    <p><b>1. Allgemeine Hinweise</b><br>
+                        Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Wir verarbeiten Ihre Daten ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TMG).
+                    </p>
+                    <p><b>2. Keine Verwendung von Cookies</b><br>
+                        Unsere Website verwendet keine Cookies. Es werden keine Tracking- oder Analyse-Tools eingesetzt. Bitte beachten Sie jedoch, dass auf unserer Website eingebettete Inhalte (z. B. YouTube-Videos im erweiterten Datenschutzmodus) dennoch Verbindungen zu Drittanbietern herstellen können, die ggf. Daten verarbeiten.
+                    </p>
+                    <p><b>3. Server-Logfiles</b><br>
+                        Beim Aufrufen unserer Website werden automatisch Informationen durch den Internetbrowser Ihres Endgeräts an den Server von Netlify (unserem Hosting-Anbieter) übermittelt und dort in sogenannten Server-Logfiles gespeichert. Diese Daten umfassen z. B.:
+                    </p>
+                    <ul style="margin-left: 1.5em;">
+                        <li>IP-Adresse des anfragenden Geräts</li>
+                        <li>Datum und Uhrzeit des Zugriffs</li>
+                        <li>Name und URL der abgerufenen Datei</li>
+                        <li>Website, von der aus der Zugriff erfolgt (Referrer-URL)</li>
+                        <li>Verwendeter Browser und ggf. das Betriebssystem Ihres Rechners</li>
+                    </ul>
+                    <p>
+                        Diese Daten dienen ausschließlich der technischen Bereitstellung, der Stabilität und der Sicherheit der Website. Eine personenbezogene Auswertung durch uns findet nicht statt. Weitere Informationen zur Datenverarbeitung durch Netlify erhalten Sie in der <a href="https://www.netlify.com/privacy">Datenschutzerklärung von Netlify</a>.
+                    </p>
+                    <p><b>4. Kontaktaufnahme</b><br>
+                        Wenn Sie mit uns per E-Mail, Kontaktformular oder über ein eingebettetes Google Formular in Verbindung treten, verwenden wir Ihre personenbezogenen Daten ausschließlich zur Bearbeitung Ihrer Anfrage oder Bewerbung.
+                    </p>
+                    <p>
+                        Bitte beachten Sie, dass bei Nutzung des Google Formulars die Daten auf den Servern von Google verarbeitet werden. Für diese Datenverarbeitung ist Google verantwortlich. Weitere Informationen finden Sie in der <a href="https://policies.google.com/privacy">Datenschutzerklärung von Google</a>.
+                    </p>
+                    <p>
+                        Eine Weitergabe Ihrer Daten an Dritte erfolgt nicht, sofern dies nicht zur Bearbeitung Ihrer Anfrage erforderlich ist oder gesetzlich vorgeschrieben ist.
+                    </p>
+                    <p><b>5. Verlinkungen zu Social-Media-Plattformen</b><br>
+                        Unsere Website enthält Links zu unseren Profilen auf Instagram und YouTube. Wenn Sie diesen Links folgen, verlassen Sie unsere Website und gelangen zu den jeweiligen Plattformen. Für den Umgang mit Ihren Daten auf diesen Seiten sind die Betreiber der Plattformen verantwortlich. Wir empfehlen Ihnen, die Datenschutzerklärungen dieser Dienste zu lesen.
+                    </p>
+                    <p><b>6. Ihre Rechte</b><br>
+                        Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit sowie Widerspruch gegen die Verarbeitung Ihrer personenbezogenen Daten. Bei Fragen zum Datenschutz können Sie uns jederzeit kontaktieren.
+                    </p>
+                    <p>
+                        Verantwortlich für die Datenverarbeitung:<br>
+                        TFL Studios<br>
+                        [Adresse]<br>
+                        <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a>
+                    </p>
+                </section>
+
+
+            </div>
         </main>
         <footer>
             <p>&copy 2025 TFL Studios</p>
             <p>
-                <a href="impressum-und-datenschutz.html#Impressum">Impressum</a> |
-                <a href="impressum-und-datenschutz.html#Datenschutz">Datenschutz</a>
+                <a href="index.html">Startseite</a> |
+                <a href="#impressum">Impressum</a> |
+                <a href="#datenschutz">Datenschutz</a>
             </p>
             <p>
+                <a href="https://www.youtube.com/@TFLStudios25">YouTube</a> |
                 <a href="https://www.instagram.com/tfl_studios25">Instagram</a>
             </p>
         </footer>
