--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <div class="banner">
             <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
-            <a href="https://www.youtube.com/@TFLStudios25"><img src="assets/youtube.svg"></a>
+            <a href="https://www.youtube.com/@TFLStudios25">
+                <svg class="icon" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.603 9.833L9.357 8.785C9.161 8.694 9 8.796 9 9.013v1.974c0 .217.161.319.357.228l2.245-1.048c.197-.092.197-.242.001-.334zM10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm0 13.5c-4.914 0-5-.443-5-3.9s.086-3.9 5-3.9 5 .443 5 3.9-.086 3.9-5 3.9z"/>
+                </svg>
+            </a>
         </div>
         <main>
             <section class="video">
@@ -47,8 +51,9 @@
         <footer>
             <p>&copy 2025 TFL Studios</p>
             <p>
-                <a href="impressum-und-datenschutz.html#Impressum">Impressum</a> |
-                <a href="impressum-und-datenschutz.html#Datenschutz">Datenschutz</a>
+                <a href="index.html">Startseite</a> |
+                <a href="impressum-und-datenschutz.html#impressum">Impressum</a> |
+                <a href="impressum-und-datenschutz.html#datenschutz">Datenschutz</a>
             </p>
             <p>
                 <a href="https://www.youtube.com/@TFLStudios25">YouTube</a> |
