--- a/impressum-und-datenschutz.html
+++ b/impressum-und-datenschutz.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Impressum und Datenschutz | TFL Studios</title>
         <link rel="stylesheet" href="style.css"/>
+        <script src="script.js" defer></script>
         <meta name="robots" content="noindex">
     </head>
     <body>
