--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
             <a href="https://www.youtube.com/@TFLStudios25">
-                <svg class="icon" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <svg class="icon" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M11.603 9.833L9.357 8.785C9.161 8.694 9 8.796 9 9.013v1.974c0 .217.161.319.357.228l2.245-1.048c.197-.092.197-.242.001-.334zM10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm0 13.5c-4.914 0-5-.443-5-3.9s.086-3.9 5-3.9 5 .443 5 3.9-.086 3.9-5 3.9z"/>
                 </svg>
             </a>
@@ -35,16 +35,20 @@
                 <h1>Bevorstehende Filmprojekte</h1>
                 <div class="project-container">
                     <a href="https://www.youtube.com"><img class="poster" src="assets/365-days-of-dead.png"></a>
-                    <p class="project-description">Unser Pilotprojekt 365 Days of Dead spielt in einer alternativen Gegenwart, in der [...]</p>
+                    <p class="project-description">
+                        Unser Pilotprojekt <b>365 Days of Dead</b> spielt in einer alternativen Gegenwart, in der die USA nach dem Zweiten Weltkrieg eine „vereinte Nation“ gegründet haben. Doch eine Katastrophe verwandelt die Welt in eine postapokalyptische Landschaft voller Untoter. Die Überlebenden kämpfen nicht nur ums Überleben, sondern auch darum, eine neue Gesellschaft aufzubauen. Über sieben Staffeln erzählen wir ihre Geschichte voller Action, Drama und Hoffnung in einer zerstörten Welt.
+                    </p>
                 </div>
                 <div class="project-container">
                     <a href="https://www.youtube.com"><img class="poster" src="assets/we-are-not-alone-1983.png"></a>
-                    <p class="project-description">We are not alone 1983</p>
+                    <p class="project-description">Der Horror-Thriller <b>We are not alone 1983</b> entführt dich in eine düstere Welt voller Verschwörungen und Geheimnisse. Im Jahr 1983 gelangt die Aktivistengruppe „Wiedergeburt“ an geheime Atomcodes und bringt damit die Welt an den Rand eines nuklearen Winters. In drei spannungsgeladenen Filmen verfolgen wir die dunklen Folgen ihres Handelns und den verzweifelten Kampf ums Überleben in einer eisigen, bedrohlichen Welt.
+
+</p>
                 </div>
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
-                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann schick uns gerne eine DM auf Instagram oder eine E-Mail!</p>
+                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann bewerbe dich bei uns über <a href="https://docs.google.com/forms/d/1-ZXC2AGwbsdHVadj94xTnE0oja3_9y9_72tbQxSCGVY/edit">dieses Formular</a>!</p>
             </section>
 
         </main>
