--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
                         Unser Pilotprojekt <b>365 Days of Dead</b> spielt in einer alternativen Gegenwart, in der die USA nach dem Zweiten Weltkrieg eine „vereinte Nation“ gegründet haben. Doch eine Katastrophe verwandelt die Welt in eine postapokalyptische Landschaft voller Untoter. Die Überlebenden kämpfen nicht nur ums Überleben, sondern auch darum, eine neue Gesellschaft aufzubauen. Über sieben Staffeln erzählen wir ihre Geschichte voller Action, Drama und Hoffnung in einer zerstörten Welt.
                     </p>
                 </div>
-                <div class="project-container">
+                <div class="project-container" style="margin-top: 1rem;">
                     <a href="https://www.youtube.com"><img class="poster" src="assets/we-are-not-alone-1983.png"></a>
-                    <p class="project-description">Der Horror-Thriller <b>We are not alone 1983</b> entführt dich in eine düstere Welt voller Verschwörungen und Geheimnisse. Im Jahr 1983 gelangt die Aktivistengruppe „Wiedergeburt“ an geheime Atomcodes und bringt damit die Welt an den Rand eines nuklearen Winters. In drei spannungsgeladenen Filmen verfolgen wir die dunklen Folgen ihres Handelns und den verzweifelten Kampf ums Überleben in einer eisigen, bedrohlichen Welt.
-
-</p>
+                    <p class="project-description">
+                        Der Horror-Thriller <b>We are not alone 1983</b> entführt dich in eine düstere Welt voller Verschwörungen und Geheimnisse. Im Jahr 1983 gelangt die Aktivistengruppe „Wiedergeburt“ an geheime Atomcodes und bringt damit die Welt an den Rand eines nuklearen Winters. In drei spannungsgeladenen Filmen verfolgen wir die dunklen Folgen ihres Handelns und den verzweifelten Kampf ums Überleben in einer eisigen, bedrohlichen Welt.
+                    </p>
                 </div>
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
-                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann bewerbe dich bei uns über <a href="https://docs.google.com/forms/d/1-ZXC2AGwbsdHVadj94xTnE0oja3_9y9_72tbQxSCGVY/edit">dieses Formular</a>!</p>
+                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann bewirb dich bei uns!</p>
+                <div style="text-align: center; margin-top: 1.5rem;">
+                    <a class="button" href="https://docs.google.com/forms/d/1-ZXC2AGwbsdHVadj94xTnE0oja3_9y9_72tbQxSCGVY/edit">Bewerbungsformular</a>
+                </div>
             </section>
 
         </main>
