--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </section>
             <section class="contact">
                 <h1>Du willst mitmachen?</h1>
-                <p>Wir suchen Darsteller und Drehbuchautoren für unsere aktuellen Projekte. Hast du Lust, mit uns Geschichten zu schreiben und die Indie-Filmwelt zu verändern? Dann bewirb dich bei uns!</p>
+                <p>Ob Kamera oder Schnitt, Maske oder Schauspiel – wir suchen kreative Köpfe, die Lust haben, Teil eines engagierten Filmteams zu werden. Du möchtest mit uns außergewöhnliche Geschichten erzählen? Dann werde Teil unseres Projekts!</p>
                 <div style="text-align: center; margin-top: 1.5rem;">
                     <a class="button" href="https://docs.google.com/forms/d/1-ZXC2AGwbsdHVadj94xTnE0oja3_9y9_72tbQxSCGVY/edit">Bewerbungsformular</a>
                 </div>
