--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="noindex">
     </head>
     <body>
-        <div class="banner">
+        <header class="banner">
             <h1>TFL Studios</h1>
             <p>Unabhängig. Kreativ. Bewegend.</p>
             <a href="https://www.youtube.com/@TFLStudios25">
@@ -16,20 +16,21 @@
                     <path d="M11.603 9.833L9.357 8.785C9.161 8.694 9 8.796 9 9.013v1.974c0 .217.161.319.357.228l2.245-1.048c.197-.092.197-.242.001-.334zM10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm0 13.5c-4.914 0-5-.443-5-3.9s.086-3.9 5-3.9 5 .443 5 3.9-.086 3.9-5 3.9z"/>
                 </svg>
             </a>
-        </div>
+        </header>
+
         <main>
             <section class="video">
                 <iframe
-                src="https://www.youtube-nocookie.com/embed/6hVRQ6YDJto"
+                src="https://www.youtube-nocookie.com/embed/8oK3gAWxWd8"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
                 controls="0">
                 </iframe>
-            </section>            
-            <section class="about">
+            </section>
+            <section>
                 <h1>Wer wir sind</h1>
-                <p>Wir sind Fynn und Tim [...]</p>
+                <p>Wir sind <b>TFL Studios</b>, ein Newcomer in der Indie-Filmbranche. Wir haben es uns zum Ziel gesetzt, [...]</p>
             </section>
             <section class="projects">
                 <h1>Bevorstehende Filmprojekte</h1>
@@ -46,19 +47,19 @@
                     </p>
                 </div>
             </section>
-            <section class="contact">
+            <section>
                 <h1>Du willst mitmachen?</h1>
                 <p>Ob Kamera oder Schnitt, Maske oder Schauspiel – wir suchen kreative Köpfe, die Lust haben, Teil eines engagierten Filmteams zu werden. Du möchtest mit uns außergewöhnliche Geschichten erzählen? Dann werde Teil unseres Projekts!</p>
                 <div style="text-align: center; margin-top: 1.5rem;">
                     <a class="button" href="https://docs.google.com/forms/d/1-ZXC2AGwbsdHVadj94xTnE0oja3_9y9_72tbQxSCGVY/edit">Bewerbungsformular</a>
                 </div>
             </section>
-
         </main>
+
         <footer>
             <p>&copy 2025 TFL Studios</p>
             <p>
-                <a href="index.html">Startseite</a> |
+                <a href="#">Startseite</a> |
                 <a href="impressum-und-datenschutz.html#impressum">Impressum</a> |
                 <a href="impressum-und-datenschutz.html#datenschutz">Datenschutz</a>
             </p>
