--- a/src/pages/imprint.html
+++ b/src/pages/imprint.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Impressum und Datenschutz | TFL Studios</title>
-        <link rel="stylesheet" href="assets/style.css"/>
+        <link rel="stylesheet" href="/assets/style.css"/>
         <meta name="robots" content="noindex">
     </head>
     <body>
