--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@
             <!-- introduction -->
             <section>
                 <h1>{{introduction_heading}}</h1>
-                <p>{{introduction_content}}</p>
+                <p>{{{introduction_content}}}</p>
             </section>
             
             <!-- projects -->
@@ -43,13 +43,13 @@
                 <div class="project-container">
                     <a href="https://www.youtube.com"><img class="poster" src="assets/project-1.png"></a>
                     <p class="project-description">
-                        {{project_1_description}}
+                        {{{project_1_description}}}
                     </p>
                 </div>
                 <div class="project-container" style="margin-top: 1rem;">
                     <a href="https://www.youtube.com"><img class="poster" src="assets/project-2.png"></a>
                     <p class="project-description">
-                        {{project_2_description}}
+                        {{{project_2_description}}}
                     </p>
                 </div>
             </section>
