--- a/src/pages/imprint.html
+++ b/src/pages/imprint.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="{{lang}}">
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -15,19 +15,24 @@
                     <p>Angaben gemäß § 5 TMG:</p>
                     <p>
                         TFL Studios<br>
-                        [Fynn.h.boettcher]<br>
-                        [Straße und Hausnummer]<br>
-                        [PLZ und Ort]
+                        Fynn Hubert<br>
+                        Fuhlendorfweg 33D<br>
+                        22589 Hamburg
                     </p>
-                    <p>E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a><br>
-                    Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a></p>
-                    
-                    <p>Vertreten durch:<br>
-                    [Fynn.h.boettcher]</p>
-
-                    <p>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
-                    [Name und Anschrift wie oben]</p>
-
+                    <p>
+                        E-Mail: <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a><br>
+                        Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
+                    </p>
+                    <p>
+                        Vertreten durch:<br>
+                        Fynn Hubert
+                    </p>
+                    <p>
+                        Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+                        Fynn Hubert<br>
+                        Fuhlendorfweg 33D<br>
+                        22589 Hamburg
+                    </p>
                     <h3>Haftung für Inhalte</h2>
                     <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).</p>
 
@@ -87,9 +92,9 @@
         <footer>
             <p>&copy 2025 TFL Studios</p>
             <p>
-                <a href="/{{lang}}/index.html">Startseite</a> |
-                <a href="#legal-notice">Impressum</a> |
-                <a href="#privacy-policy">Datenschutz</a>
+                <a href="/{{lang}}/index.html">{{home}}</a> |
+                <a href="#legal-notice">{{legal_notice}}</a> |
+                <a href="#privacy-policy">{{privacy_policy}}</a>
             </p>
             <p>
                 <a href="https://www.youtube.com/@TFLStudios25">YouTube</a> |
