--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="{{lang}}">
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -23,7 +23,7 @@
         <main>
             <section class="video">
                 <iframe
-                src="https://www.youtube-nocookie.com/embed/8oK3gAWxWd8"
+                src="https://www.youtube-nocookie.com/embed/X08MhpvTUls"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
@@ -41,7 +41,7 @@
             <section class="projects">
                 <h1>{{projects_heading}}</h1>
                 <div class="project-container">
-                    <a href="https://www.youtube.com"><img class="poster" src="assets/project-1.png"></a>
+                    <a href="https://www.youtube.com"><img class="poster" src="assets/{{project_1_path}}"></a>
                     <p class="project-description">
                         {{{project_1_description}}}
                     </p>
