--- a/src/pages/imprint.html
+++ b/src/pages/imprint.html
@@ -12,7 +12,7 @@
             <div class="imprint">
                 <section>
                     <h1 id="legal-notice">{{legal_notice}}</h1>
-                    <p>Angaben gemäß § 5 TMG:</p>
+                    <p>{{legal_notice_introduction}}</p>
                     <p>
                         TFL Studios<br>
                         Fynn Hubert<br>
@@ -24,27 +24,27 @@
                         Website: <a href="https://tfl-studios.netlify.app">https://tfl-studios.netlify.app</a>
                     </p>
                     <p>
-                        Vertreten durch:<br>
+                        {{representative}}<br>
                         Fynn Hubert
                     </p>
                     <p>
-                        Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+                        {{responsible}}<br>
                         Fynn Hubert<br>
                         Fuhlendorfweg 33D<br>
                         22589 Hamburg
                     </p>
-                    <h3>Haftung für Inhalte</h2>
-                    <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).</p>
+                    <h3>{{liability_for_content}}</h2>
+                    <p>{{liability_for_content_notice}}</p>
 
-                    <h3>Haftung für Links</h2>
-                    <p>Unsere Website enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte übernehmen wir keine Gewähr. Verantwortlich ist stets der jeweilige Anbieter oder Betreiber der Seiten.</p>
+                    <h3>{{liability_for_links}}</h2>
+                    <p>{{liability_for_links_notice}}</p>
 
-                    <h3>Urheberrecht</h2>
-                    <p>Die durch uns erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung außerhalb der Grenzen des Urheberrechts bedarf der schriftlichen Zustimmung des jeweiligen Autors.</p>
+                    <h3>{{copyright}}</h2>
+                    <p>{{copyright_notice}}</p>
                 </section>
                 <section>
                     <h1 id="privacy-policy">{{privacy_policy}}</h1>
-                    <p>Wir freuen uns über Ihr Interesse an unserem Filmstudio und unserer Website.</p>
+                    <p>{{privacy_policy_introduction}}</p>
 
                     <h3>1. Allgemeine Hinweise</h2>
                     <p>Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Wir verarbeiten Ihre Daten ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TMG).</p>
@@ -84,7 +84,9 @@
 
                     <p>Verantwortlich für die Datenverarbeitung:<br>
                     TFL Studios<br>
-                    [Adresse]<br>
+                    Fynn Hubert<br>
+                    Fuhlendorfweg 33D<br>
+                    22589 Hamburg<br>
                     <a href="mailto:thefastlanestudios25@gmail.com">thefastlanestudios25@gmail.com</a></p>
                 </section>
             </div>
