--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -41,7 +41,7 @@
             <section class="projects">
                 <h1>{{projects_heading}}</h1>
                 <div class="project-container">
-                    <a href="https://www.youtube.com"><img class="poster" src="assets/{{project_1_path}}"></a>
+                    <a href="https://www.youtube.com"><img class="poster" src="assets/project-1.png"></a>
                     <p class="project-description">
                         {{{project_1_description}}}
                     </p>
